--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@ https://templatemo.com/tm-552-video-catalog
                             </div>        
                         </div>
                     </div>
-                    
+                </main>
+                <main>
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="tm-page-title mb-4">Thiyagesan</h1>
                     <div class="row tm-catalog-item-list">
                                             <video width="1422" height="800" controls autoplay>
                               <source src="video/Thiyagesan.mp4" type="video/mp4">                              
@@ -98,7 +102,68 @@ https://templatemo.com/tm-552-video-catalog
                             </video>
                         </div>
                     </div>
+                    </main>
 
+                    <main>
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="tm-page-title mb-4">Selvaraj</h1>
+                    <div class="row tm-catalog-item-list">
+                            <video width="1422" height="800" controls autoplay>
+                              <source src="video/Selvaraj.mp4" type="video/mp4">                              
+                            Your browser does not support the video tag.
+                            </video>
+                        </div>
+                    </div>
+                    </div>        
+                    </div>
+                    </div>
+                </main>
+
+                <main>
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="tm-page-title mb-4">Ethirajulu</h1>
+                    <div class="row tm-catalog-item-list">
+                            <video width="1422" height="800" controls autoplay>
+                              <source src="video/Ethirajulu.mp4" type="video/mp4">                              
+                            Your browser does not support the video tag.
+                            </video>
+                        </div>
+                    </div>
+                    </div>        
+                    </div>
+                    </div>
+                </main>
+                <main>
+                    <div class="row">
+                            <h1 class="tm-page-title mb-4">Sivakumar</h1>
+                    <div class="row tm-catalog-item-list">
+                            <video width="1422" height="800" controls autoplay>
+                              <source src="video/Sivakumar.mp4" type="video/mp4">                              
+                            Your browser does not support the video tag.
+                            </video>
+                        </div>
+                    </div>
+                    </div>        
+                    </div>
+                    </div>
+                </main>
+                <main>
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="tm-page-title mb-4">Seenuboy</h1>
+                    <div class="row tm-catalog-item-list">
+                            <video width="1422" height="800" controls autoplay>
+                              <source src="video/Seenuboy.mp4" type="video/mp4">                              
+                            Your browser does not support the video tag.
+                            </video>
+                        </div>
+                    </div>
+                    </div>        
+                    </div>
+                    </div>
+                </main>
                     <!-- Catalog Paging Buttons -->
                     <div>
                         <ul class="nav tm-paging-links">
