--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ https://templatemo.com/tm-552-video-catalog
                             <div class="tm-categories-container mb-5">
                                 <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
                                 <ul class="nav tm-category-list">
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">All</a></li>
-                                </ul>
+                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">Thiyagesan</a></li>
+                    </ul>
                             </div>
                         </div>
                     </div>
