--- a/Sivakumar.html
+++ b/Sivakumar.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-552-video-catalog
                 <main>
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="tm-page-title mb-4">Thiyagesan</h1>
+                            <h1 class="tm-page-title mb-4">Sivakumar</h1>
                     <div class="row tm-catalog-item-list">
                                             <video width="1422" height="800" controls autoplay>
                               <source src="video/Sivakumar.mp4" type="video/mp4">
