New changes in Pavan Page

--- a/Pavan.html
+++ b/Pavan.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-552-video-catalog
                             <div class="tm-categories-container mb-5">
                                 <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
                                 <ul class="nav tm-category-list">
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">Selvaraj</a></li>
+                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">Pavan</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -94,10 +94,10 @@ https://templatemo.com/tm-552-video-catalog
                 <main>
                     <div class="row">
                         <div class="col-12">
-                            <h1 class="tm-page-title mb-4">Selvaraj</h1>
+                            <h1 class="tm-page-title mb-4">Pavan</h1>
                     <div class="row tm-catalog-item-list">
                                             <video width="1422" height="800" controls autoplay>
-                              <source src="video/Selvaraj.mp4" type="video/mp4">
+                              <source src="video/Pavan.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                             </video>
                         </div>
