--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@ https://templatemo.com/tm-552-video-catalog
                             Your browser does not support the video tag.
                             </video>
                         </div>
+
+                        <div class="row tm-catalog-item-list-2"></div>
+                        <video width="1422" height="800" controls autoplay>
+                            <source src="video/uniq X name.MP4" type="video/mp4">
+                          Your browser does not support the video tag.
+                          </video>
+                        </div>
                     </div>
                     </main>
                     <!-- Catalog Paging Buttons -->
