--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThiyaguRebornx</title>
+    <title>ThiyaguBusiness</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link rel="icon" href="img/logo-large.png" type="PNG/Jpg">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/templatemo-video-catalog.css">
-
-TemplateMo 552 Video Catalog
-
-https://templatemo.com/tm-552-video-catalog
-
--->
+    <link type="image/png" sizes="16x16" rel="icon" href=".../icons8-online-business-16.png">
 </head>
 
 <body>
@@ -27,8 +22,8 @@ https://templatemo.com/tm-552-video-catalog
                     <div class="row">
                         <div class="col-7 col-md-4">
                             <a href="index.html" class="tm-bg-black text-center tm-logo-container">
-                                <i class="fas fa-video tm-site-logo mb-3"></i>
-                                <h1 class="tm-site-name">ThiyaguRebornx</h1>
+                                <img src="https://img.icons8.com/external-smashingstocks-thin-outline-color-smashing-stocks/67/000000/external-online-business-marketing-smashingstocks-thin-outline-color-smashing-stocks.png"/>
+                                <h1 class="tm-site-name">ThiyaguBusiness</h1>
                             </a>
                         </div>
                         <div class="col-5 col-md-8 ml-auto mr-0">
@@ -57,7 +52,7 @@ https://templatemo.com/tm-552-video-catalog
             </div>
             <div class="tm-welcome-container text-center text-white">
                 <div class="tm-welcome-container-inner">
-                    <p class="tm-welcome-text mb-1 text-white">Unlimited Money Earning platform</p>
+                    <p class="tm-welcome-text mb-1 text-white">Money Earning Opportunities</p>
                     <p class="tm-welcome-text mb-5 text-white"></p>
                     <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
                         <span>Discover</span>
@@ -84,23 +79,40 @@ https://templatemo.com/tm-552-video-catalog
                             <div class="tm-categories-container mb-5">
                                 <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
                                 <ul class="nav tm-category-list">
-                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">Thiyagesan</a></li>
+                                    <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">ALL OPPORTUNITIES</a></li>
                     </ul>
                             </div>
                         </div>
                     </div>
                 </main>
                 <main>
-                    <div class="row">
-                        <div class="col-12">
-                            <h1 class="tm-page-title mb-4">Thiyagesan</h1>
                     <div class="row tm-catalog-item-list">
-                                            <video width="1422" height="800" controls autoplay>
-                              <source src="video/Thiyagesan.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                            </video>
+                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                            <div class="position-relative tm-thumbnail-container">
+                                <img src="E:\Websites\Rebornx\BUSINESS\img\nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <a href="REBORNX.html" class="position-absolute tm-img-overlay">
+                                    <i class="fas fa-play tm-overlay-icon"></i>
+                                </a>
+                            </div>    
+                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">REBORN X</h3>
+                                <p class="tm-catalog-item-text">PLEASE CLICK AND WATCH THE ENTIRE VIDEO. 
+                                </p>
+                            </div>
                         </div>
-                    </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                            <div class="position-relative tm-thumbnail-container">
+                                <img src="E:\Websites\Rebornx\BUSINESS\img\austin-distel-gUIJ0YszPig-unsplash.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <a href="TIRUS.html" class="position-absolute tm-img-overlay">
+                                    <i class="fas fa-play tm-overlay-icon"></i>
+                                </a>
+                            </div>
+                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">TIRUS</h3>
+                                <p class="tm-catalog-item-text">PLEASE CLICK AND WATCH THE ENTIRE VIDEO.</p>
+                            </div>
+                        </div>                    
+                        </div>
                     </main>
                     <!-- Catalog Paging Buttons -->
                     <div>
@@ -114,24 +126,11 @@ https://templatemo.com/tm-552-video-catalog
                 <div class="row mt-5 pt-3">
                     <div class="col-xl-6 col-lg-12 mb-4">
                         <div class="tm-bg-gray p-5 h-100">
-                            <h3 class="tm-text-primary mb-3">Do you want to get our latest updates?</h3>
-                            <p class="mb-5">Please subscribe our newsletter for upcoming new videos and latest information about our
-                                work. Thank you.</p>
-                            <form action="" method="GET" class="tm-subscribe-form">
-                                <input type="text" name="email" placeholder="Your Email..." required>
-                                <button type="submit" class="btn rounded-0 btn-primary tm-btn-small">Subscribe</button>
-                            </form>
+                            <h3 class="tm-text-primary mb-3">Do you want to know more about the business?</h3>
+                            <p class="mb-5">Please Contact us at: Mobile: 9380173159. Thank you.</p>
                         </div>
                     </div>
                 </div> <!-- row -->
-
-                <footer class="row pt-5">
-                    <div class="col-12">
-                        <p class="text-right">Copyright 2020 The Video Catalog Company
-
-                        - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
-                    </div>
-                </footer>
             </div> <!-- tm-content-container -->
         </div>
 
