--- a/TIRUS.html
+++ b/TIRUS.html
@@ -22,7 +22,7 @@
                     <div class="row">
                         <div class="col-7 col-md-4">
                             <a href="index.html" class="tm-bg-black text-center tm-logo-container">
-                                <img src="E:\Websites\Rebornx\BUSINESS\img\Tirus.png"/>
+                                <img src="img\Tirus.png"/>
                                 <h1 class="tm-site-name">ThiyaguBusiness</h1>
                             </a>
                         </div>
