--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="row tm-catalog-item-list">
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="E:\Websites\Rebornx\BUSINESS\img\nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <img src="img\nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
                                 <a href="REBORNX.html" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="E:\Websites\Rebornx\BUSINESS\img\austin-distel-gUIJ0YszPig-unsplash.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <img src="img\austin-distel-gUIJ0YszPig-unsplash.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
                                 <a href="TIRUS.html" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
